...
    case saved = "saved"
    case applications = "applications"

    var title: String {
        switch self {
        case .search:
            return "Search"
        case .favorites:
            return "Favorites"
        case .saved:
            return "Saved Searches"
        case .applications:
            return "Applications"
        }
    }

    var icon: String {
        switch self {
        case .search:
...
